[gd_scene load_steps=8 format=2]

[ext_resource path="res://images/skull_altar_active.png" type="Texture" id=1]
[ext_resource path="res://scenes/CultHideout.gd" type="Script" id=2]
[ext_resource path="res://game/actors/BossFightHorror.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/actors/JesusTest.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/DemoTileset.tres" type="TileSet" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.7631, 13.4276 )

[sub_resource type="CircleShape2D" id=2]
radius = 44.0114

[node name="CultHideout" type="YSort"]
script = ExtResource( 2 )

[node name="Tilesets" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "This is for all the tilesets."
}

[node name="TileMap" type="TileMap" parent="Tilesets"]
tile_set = ExtResource( 6 )
format = 1
tile_data = PoolIntArray( -2031583, 17, 0, -2031582, 17, 0, -2031581, 17, 0, -2031580, 17, 0, -2031579, 17, 0, -2031578, 17, 0, -2031577, 17, 0, -2031576, 17, 0, -2031575, 17, 0, -2031574, 17, 0, -2031573, 17, 0, -2031572, 17, 0, -2031571, 17, 0, -2031570, 17, 0, -1966048, 17, 0, -1966047, 13, 0, -1966046, 13, 0, -1966045, 13, 0, -1966044, 13, 0, -1966043, 13, 0, -1966042, 13, 0, -1966041, 13, 0, -1966040, 13, 0, -1966039, 13, 0, -1966038, 13, 0, -1966037, 13, 0, -1966036, 13, 0, -1966035, 13, 0, -1966034, 13, 0, -1966033, 17, 0, -1900512, 17, 0, -1900511, 13, 0, -1900510, 13, 0, -1900509, 13, 0, -1900508, 13, 0, -1900507, 13, 0, -1900506, 13, 0, -1900505, 13, 0, -1900504, 13, 0, -1900503, 13, 0, -1900502, 13, 0, -1900501, 13, 0, -1900500, 13, 0, -1900499, 13, 0, -1900498, 13, 0, -1900497, 13, 0, -1900496, 17, 0, -1834976, 17, 0, -1834975, 13, 0, -1834974, 13, 0, -1834973, 13, 0, -1834972, 13, 0, -1834971, 13, 0, -1834970, 13, 0, -1834969, 13, 0, -1834968, 13, 0, -1834967, 13, 0, -1834966, 13, 0, -1834965, 13, 0, -1834964, 13, 0, -1834963, 13, 0, -1834962, 13, 0, -1834961, 13, 0, -1834960, 17, 0, -1769440, 17, 0, -1769439, 13, 0, -1769438, 13, 0, -1769437, 13, 0, -1769436, 13, 0, -1769435, 13, 0, -1769434, 13, 0, -1769433, 13, 0, -1769432, 13, 0, -1769431, 13, 0, -1769430, 13, 0, -1769429, 13, 0, -1769428, 13, 0, -1769427, 13, 0, -1769426, 13, 0, -1769425, 13, 0, -1769424, 17, 0, -1703904, 17, 0, -1703903, 13, 0, -1703902, 13, 0, -1703901, 13, 0, -1703900, 13, 0, -1703899, 13, 0, -1703898, 13, 0, -1703897, 13, 0, -1703896, 13, 0, -1703895, 13, 0, -1703894, 13, 0, -1703893, 13, 0, -1703892, 13, 0, -1703891, 13, 0, -1703890, 13, 0, -1703889, 13, 0, -1703888, 17, 0, -1638368, 17, 0, -1638367, 13, 0, -1638366, 13, 0, -1638365, 13, 0, -1638364, 13, 0, -1638363, 13, 0, -1638362, 13, 0, -1638361, 13, 0, -1638360, 13, 0, -1638359, 13, 0, -1638358, 13, 0, -1638357, 13, 0, -1638356, 13, 0, -1638355, 13, 0, -1638354, 13, 0, -1638353, 13, 0, -1638352, 17, 0, -1572847, 17, 0, -1572846, 17, 0, -1572845, 17, 0, -1572844, 17, 0, -1572843, 17, 0, -1572842, 17, 0, -1572841, 17, 0, -1572840, 17, 0, -1572839, 17, 0, -1572838, 17, 0, -1572837, 17, 0, -1572836, 17, 0, -1572835, 17, 0, -1572834, 17, 0, -1572833, 17, 0, -1572832, 17, 0, -1572831, 13, 0, -1572830, 13, 0, -1572829, 13, 0, -1572828, 13, 0, -1572827, 13, 0, -1572826, 13, 0, -1572825, 13, 0, -1572824, 13, 0, -1572823, 13, 0, -1572822, 13, 0, -1572821, 13, 0, -1572820, 13, 0, -1572819, 13, 0, -1572818, 13, 0, -1572817, 13, 0, -1572816, 17, 0, -1507311, 17, 0, -1507310, 13, 0, -1507309, 13, 0, -1507308, 13, 0, -1507307, 13, 0, -1507306, 13, 0, -1507305, 13, 0, -1507304, 13, 0, -1507303, 13, 0, -1507302, 13, 0, -1507301, 13, 0, -1507300, 13, 0, -1507299, 13, 0, -1507298, 13, 0, -1507297, 13, 0, -1507296, 13, 0, -1507295, 13, 0, -1507294, 13, 0, -1507293, 13, 0, -1507292, 13, 0, -1507291, 13, 0, -1507290, 13, 0, -1507289, 13, 0, -1507288, 13, 0, -1507287, 13, 0, -1507286, 13, 0, -1507285, 13, 0, -1507284, 13, 0, -1507283, 13, 0, -1507282, 13, 0, -1507281, 13, 0, -1507280, 17, 0, -1441775, 17, 0, -1441774, 13, 0, -1441773, 13, 0, -1441772, 13, 0, -1441771, 13, 0, -1441770, 13, 0, -1441769, 13, 0, -1441768, 13, 0, -1441767, 13, 0, -1441766, 13, 0, -1441765, 13, 0, -1441764, 13, 0, -1441763, 13, 0, -1441762, 13, 0, -1441761, 13, 0, -1441760, 13, 0, -1441759, 13, 0, -1441758, 13, 0, -1441757, 13, 0, -1441756, 13, 0, -1441755, 13, 0, -1441754, 13, 0, -1441753, 13, 0, -1441752, 13, 0, -1441751, 13, 0, -1441750, 13, 0, -1441749, 13, 0, -1441748, 13, 0, -1441747, 13, 0, -1441746, 13, 0, -1441745, 13, 0, -1441744, 17, 0, -1376239, 17, 0, -1376238, 13, 0, -1376237, 13, 0, -1376236, 17, 0, -1376235, 17, 0, -1376234, 17, 0, -1376233, 17, 0, -1376232, 17, 0, -1376231, 17, 0, -1376230, 17, 0, -1376229, 17, 0, -1376228, 17, 0, -1376227, 17, 0, -1376226, 17, 0, -1376225, 17, 0, -1376224, 17, 0, -1376223, 13, 0, -1376222, 13, 0, -1376221, 13, 0, -1376220, 13, 0, -1376219, 13, 0, -1376218, 13, 0, -1376217, 13, 0, -1376216, 13, 0, -1376215, 13, 0, -1376214, 13, 0, -1376213, 13, 0, -1376212, 13, 0, -1376211, 13, 0, -1376210, 13, 0, -1376209, 13, 0, -1376208, 17, 0, -1310703, 17, 0, -1310702, 13, 0, -1310701, 13, 0, -1310700, 17, 0, -1310688, 17, 0, -1310687, 13, 0, -1310686, 13, 0, -1310685, 13, 0, -1310684, 13, 0, -1310683, 13, 0, -1310682, 13, 0, -1310681, 13, 0, -1310680, 13, 0, -1310679, 13, 0, -1310678, 13, 0, -1310677, 13, 0, -1310676, 13, 0, -1310675, 13, 0, -1310674, 13, 0, -1310673, 17, 0, -1245167, 17, 0, -1245166, 13, 0, -1245165, 13, 0, -1245164, 17, 0, -1245152, 17, 0, -1245151, 13, 0, -1245150, 13, 0, -1245149, 13, 0, -1245148, 13, 0, -1245147, 13, 0, -1245146, 13, 0, -1245145, 13, 0, -1245144, 13, 0, -1245143, 13, 0, -1245142, 13, 0, -1245141, 13, 0, -1245140, 13, 0, -1245139, 13, 0, -1245138, 13, 0, -1245137, 17, 0, -1179631, 17, 0, -1179630, 13, 0, -1179629, 13, 0, -1179628, 17, 0, -1179616, 17, 0, -1179615, 17, 0, -1179614, 17, 0, -1179613, 17, 0, -1179612, 17, 0, -1179611, 17, 0, -1179610, 17, 0, -1179609, 17, 0, -1179608, 17, 0, -1179607, 17, 0, -1179606, 17, 0, -1179605, 17, 0, -1179604, 17, 0, -1179603, 17, 0, -1179602, 17, 0, -1179601, 17, 0, -1114095, 17, 0, -1114094, 13, 0, -1114093, 13, 0, -1114092, 17, 0, -1048559, 17, 0, -1048558, 13, 0, -1048557, 13, 0, -1048556, 17, 0, -983023, 17, 0, -983022, 13, 0, -983021, 13, 0, -983020, 17, 0, -917487, 17, 0, -917486, 13, 0, -917485, 13, 0, -917484, 17, 0, -851951, 17, 0, -851950, 13, 0, -851949, 13, 0, -851948, 17, 0, -786415, 17, 0, -786414, 13, 0, -786413, 13, 0, -786412, 17, 0, -720879, 17, 0, -720878, 13, 0, -720877, 13, 0, -720876, 17, 0, -720875, 17, 0, -655344, 17, 0, -655343, 13, 0, -655342, 13, 0, -655341, 13, 0, -655340, 13, 0, -655339, 17, 0, -589808, 17, 0, -589807, 13, 0, -589806, 13, 0, -589805, 13, 0, -589804, 13, 0, -589803, 17, 0, -524272, 17, 0, -524271, 13, 0, -524270, 13, 0, -524269, 13, 0, -524268, 13, 0, -524267, 17, 0, -458736, 17, 0, -458735, 13, 0, -458734, 13, 0, -458733, 13, 0, -458732, 13, 0, -458731, 17, 0, -393200, 17, 0, -393199, 13, 0, -393198, 13, 0, -393197, 13, 0, -393196, 13, 0, -393195, 17, 0, -393177, 17, 0, -393176, 17, 0, -393175, 17, 0, -393174, 17, 0, -393173, 17, 0, -393172, 17, 0, -393171, 17, 0, -393170, 17, 0, -393169, 17, 0, -393168, 17, 0, -393167, 17, 0, -393166, 17, 0, -393165, 17, 0, -393164, 17, 0, -393163, 17, 0, -393162, 17, 0, -327664, 17, 0, -327663, 13, 0, -327662, 13, 0, -327661, 13, 0, -327660, 13, 0, -327659, 17, 0, -327642, 17, 0, -327641, 13, 0, -327640, 13, 0, -327639, 13, 0, -327638, 13, 0, -327637, 13, 0, -327636, 13, 0, -327635, 13, 0, -327634, 13, 0, -327633, 13, 0, -327632, 13, 0, -327631, 13, 0, -327630, 13, 0, -327629, 13, 0, -327628, 13, 0, -327627, 13, 0, -327626, 13, 0, -327625, 17, 0, -262128, 17, 0, -262127, 13, 0, -262126, 13, 0, -262125, 13, 0, -262124, 13, 0, -262123, 17, 0, -262106, 17, 0, -262105, 13, 0, -262104, 13, 0, -262103, 13, 0, -262102, 13, 0, -262101, 13, 0, -262100, 13, 0, -262099, 13, 0, -262098, 13, 0, -262097, 13, 0, -262096, 13, 0, -262095, 13, 0, -262094, 13, 0, -262093, 13, 0, -262092, 13, 0, -262091, 13, 0, -262090, 13, 0, -262089, 13, 0, -262088, 17, 0, -196592, 17, 0, -196591, 13, 0, -196590, 13, 0, -196589, 13, 0, -196588, 13, 0, -196587, 17, 0, -196570, 17, 0, -196569, 13, 0, -196568, 13, 0, -196567, 13, 0, -196566, 13, 0, -196565, 13, 0, -196564, 13, 0, -196563, 13, 0, -196562, 13, 0, -196561, 13, 0, -196560, 13, 0, -196559, 13, 0, -196558, 13, 0, -196557, 13, 0, -196556, 13, 0, -196555, 13, 0, -196554, 13, 0, -196553, 13, 0, -196552, 17, 0, -131072, 17, 0, -131071, 17, 0, -131070, 17, 0, -131069, 17, 0, -131068, 17, 0, -131067, 17, 0, -131066, 17, 0, -131065, 17, 0, -131064, 17, 0, -131063, 17, 0, -131062, 17, 0, -131061, 17, 0, -131060, 17, 0, -131059, 17, 0, -131058, 17, 0, -131057, 17, 0, -131056, 17, 0, -131055, 13, 0, -131054, 13, 0, -131053, 13, 0, -131052, 13, 0, -131051, 17, 0, -131050, 17, 0, -131049, 17, 0, -131048, 17, 0, -131047, 17, 0, -131046, 17, 0, -131045, 17, 0, -131044, 17, 0, -131043, 17, 0, -131042, 17, 0, -131034, 17, 0, -131033, 13, 0, -131032, 13, 0, -131031, 13, 0, -131030, 13, 0, -131029, 13, 0, -131028, 13, 0, -131027, 13, 0, -131026, 13, 0, -131025, 13, 0, -131024, 13, 0, -131023, 13, 0, -131022, 13, 0, -131021, 13, 0, -131020, 13, 0, -131019, 13, 0, -131018, 13, 0, -131017, 13, 0, -131016, 17, 0, -1, 17, 0, -65536, 13, 0, -65535, 13, 0, -65534, 13, 0, -65533, 13, 0, -65532, 13, 0, -65531, 13, 0, -65530, 13, 0, -65529, 13, 0, -65528, 13, 0, -65527, 13, 0, -65526, 13, 0, -65525, 13, 0, -65524, 13, 0, -65523, 13, 0, -65522, 13, 0, -65521, 13, 0, -65520, 13, 0, -65519, 13, 0, -65518, 13, 0, -65517, 13, 0, -65516, 13, 0, -65515, 13, 0, -65514, 13, 0, -65513, 13, 0, -65512, 13, 0, -65511, 13, 0, -65510, 13, 0, -65509, 13, 0, -65508, 13, 0, -65507, 13, 0, -65506, 13, 0, -65505, 17, 0, -65504, 17, 0, -65503, 17, 0, -65502, 17, 0, -65501, 17, 0, -65500, 17, 0, -65499, 17, 0, -65498, 17, 0, -65497, 13, 0, -65496, 13, 0, -65495, 13, 0, -65494, 13, 0, -65493, 13, 0, -65492, 13, 0, -65491, 13, 0, -65490, 13, 0, -65489, 13, 0, -65488, 13, 0, -65487, 13, 0, -65486, 13, 0, -65485, 13, 0, -65484, 13, 0, -65483, 13, 0, -65482, 13, 0, -65481, 13, 0, -65480, 17, 0, 65535, 17, 0, 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 13, 0, 16, 13, 0, 17, 13, 0, 18, 13, 0, 19, 13, 0, 20, 13, 0, 21, 13, 0, 22, 13, 0, 23, 13, 0, 24, 13, 0, 25, 13, 0, 26, 13, 0, 27, 13, 0, 28, 13, 0, 29, 13, 0, 30, 13, 0, 31, 13, 0, 32, 13, 0, 33, 13, 0, 34, 13, 0, 35, 13, 0, 36, 13, 0, 37, 13, 0, 38, 13, 0, 39, 13, 0, 40, 13, 0, 41, 13, 0, 42, 13, 0, 43, 13, 0, 44, 13, 0, 45, 13, 0, 46, 13, 0, 47, 13, 0, 48, 13, 0, 49, 13, 0, 50, 13, 0, 51, 13, 0, 52, 13, 0, 53, 13, 0, 54, 13, 0, 55, 13, 0, 56, 17, 0, 131071, 17, 0, 65536, 13, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 13, 0, 65546, 13, 0, 65547, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 65554, 13, 0, 65555, 13, 0, 65556, 13, 0, 65557, 13, 0, 65558, 13, 0, 65559, 13, 0, 65560, 13, 0, 65561, 13, 0, 65562, 13, 0, 65563, 13, 0, 65564, 13, 0, 65565, 13, 0, 65566, 13, 0, 65567, 13, 0, 65568, 13, 0, 65569, 13, 0, 65570, 13, 0, 65571, 13, 0, 65572, 13, 0, 65573, 13, 0, 65574, 13, 0, 65575, 13, 0, 65576, 13, 0, 65577, 13, 0, 65578, 13, 0, 65579, 13, 0, 65580, 13, 0, 65581, 13, 0, 65582, 13, 0, 65583, 13, 0, 65584, 13, 0, 65585, 13, 0, 65586, 13, 0, 65587, 13, 0, 65588, 13, 0, 65589, 13, 0, 65590, 13, 0, 65591, 13, 0, 65592, 17, 0, 196607, 17, 0, 131072, 13, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 13, 0, 131093, 13, 0, 131094, 13, 0, 131095, 13, 0, 131096, 13, 0, 131097, 13, 0, 131098, 13, 0, 131099, 13, 0, 131100, 13, 0, 131101, 13, 0, 131102, 13, 0, 131103, 17, 0, 131104, 17, 0, 131105, 17, 0, 131106, 17, 0, 131107, 17, 0, 131108, 17, 0, 131109, 17, 0, 131110, 17, 0, 131111, 13, 0, 131112, 13, 0, 131113, 13, 0, 131114, 13, 0, 131115, 13, 0, 131116, 13, 0, 131117, 13, 0, 131118, 13, 0, 131119, 13, 0, 131120, 13, 0, 131121, 13, 0, 131122, 13, 0, 131123, 13, 0, 131124, 13, 0, 131125, 13, 0, 131126, 13, 0, 131127, 13, 0, 131128, 17, 0, 262143, 17, 0, 196608, 13, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 13, 0, 196629, 13, 0, 196630, 13, 0, 196631, 13, 0, 196632, 13, 0, 196633, 13, 0, 196634, 13, 0, 196635, 13, 0, 196636, 13, 0, 196637, 13, 0, 196638, 13, 0, 196639, 17, 0, 196646, 17, 0, 196647, 13, 0, 196648, 13, 0, 196649, 13, 0, 196650, 13, 0, 196651, 13, 0, 196652, 13, 0, 196653, 13, 0, 196654, 13, 0, 196655, 13, 0, 196656, 13, 0, 196657, 13, 0, 196658, 13, 0, 196659, 13, 0, 196660, 13, 0, 196661, 13, 0, 196662, 13, 0, 196663, 13, 0, 196664, 17, 0, 262144, 17, 0, 262145, 17, 0, 262146, 17, 0, 262147, 17, 0, 262148, 17, 0, 262149, 17, 0, 262150, 17, 0, 262151, 17, 0, 262152, 17, 0, 262153, 17, 0, 262154, 17, 0, 262155, 17, 0, 262156, 17, 0, 262157, 17, 0, 262158, 17, 0, 262159, 17, 0, 262160, 17, 0, 262161, 13, 0, 262162, 13, 0, 262163, 13, 0, 262164, 17, 0, 262165, 17, 0, 262166, 17, 0, 262167, 17, 0, 262168, 17, 0, 262169, 17, 0, 262170, 17, 0, 262171, 17, 0, 262172, 17, 0, 262173, 17, 0, 262174, 17, 0, 262182, 17, 0, 262183, 13, 0, 262184, 13, 0, 262185, 13, 0, 262186, 13, 0, 262187, 13, 0, 262188, 13, 0, 262189, 13, 0, 262190, 13, 0, 262191, 13, 0, 262192, 13, 0, 262193, 13, 0, 262194, 13, 0, 262195, 13, 0, 262196, 13, 0, 262197, 13, 0, 262198, 13, 0, 262199, 13, 0, 262200, 17, 0, 327696, 17, 0, 327697, 13, 0, 327698, 13, 0, 327699, 13, 0, 327700, 17, 0, 327718, 17, 0, 327719, 13, 0, 327720, 13, 0, 327721, 13, 0, 327722, 13, 0, 327723, 13, 0, 327724, 13, 0, 327725, 13, 0, 327726, 13, 0, 327727, 13, 0, 327728, 13, 0, 327729, 13, 0, 327730, 13, 0, 327731, 13, 0, 327732, 13, 0, 327733, 13, 0, 327734, 13, 0, 327735, 13, 0, 327736, 17, 0, 393232, 17, 0, 393233, 13, 0, 393234, 13, 0, 393235, 13, 0, 393236, 17, 0, 393254, 17, 0, 393255, 13, 0, 393256, 13, 0, 393257, 13, 0, 393258, 13, 0, 393259, 13, 0, 393260, 13, 0, 393261, 13, 0, 393262, 13, 0, 393263, 13, 0, 393264, 13, 0, 393265, 13, 0, 393266, 13, 0, 393267, 13, 0, 393268, 13, 0, 393269, 13, 0, 393270, 13, 0, 393271, 13, 0, 393272, 17, 0, 458768, 17, 0, 458769, 13, 0, 458770, 13, 0, 458771, 13, 0, 458772, 17, 0, 458790, 17, 0, 458791, 13, 0, 458792, 13, 0, 458793, 13, 0, 458794, 13, 0, 458795, 13, 0, 458796, 13, 0, 458797, 13, 0, 458798, 13, 0, 458799, 13, 0, 458800, 13, 0, 458801, 13, 0, 458802, 13, 0, 458803, 13, 0, 458804, 13, 0, 458805, 13, 0, 458806, 13, 0, 458807, 13, 0, 458808, 17, 0, 524304, 17, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 524308, 17, 0, 524326, 17, 0, 524327, 13, 0, 524328, 13, 0, 524329, 13, 0, 524330, 13, 0, 524331, 13, 0, 524332, 13, 0, 524333, 13, 0, 524334, 13, 0, 524335, 13, 0, 524336, 13, 0, 524337, 13, 0, 524338, 13, 0, 524339, 13, 0, 524340, 13, 0, 524341, 13, 0, 524342, 13, 0, 524343, 13, 0, 524344, 17, 0, 589837, 17, 0, 589838, 17, 0, 589839, 17, 0, 589840, 17, 0, 589841, 13, 0, 589842, 13, 0, 589843, 13, 0, 589844, 17, 0, 589845, 17, 0, 589846, 17, 0, 589847, 17, 0, 589848, 17, 0, 589849, 17, 0, 589850, 17, 0, 589851, 17, 0, 589852, 17, 0, 589862, 17, 0, 589863, 13, 0, 589864, 13, 0, 589865, 13, 0, 589866, 13, 0, 589867, 13, 0, 589868, 13, 0, 589869, 13, 0, 589870, 13, 0, 589871, 13, 0, 589872, 13, 0, 589873, 13, 0, 589874, 13, 0, 589875, 13, 0, 589876, 13, 0, 589877, 13, 0, 589878, 13, 0, 589879, 13, 0, 589880, 17, 0, 655372, 17, 0, 655373, 17, 0, 655374, 13, 0, 655375, 13, 0, 655376, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 17, 0, 655389, 17, 0, 655398, 17, 0, 655399, 13, 0, 655400, 13, 0, 655401, 13, 0, 655402, 13, 0, 655403, 13, 0, 655404, 13, 0, 655405, 13, 0, 655406, 13, 0, 655407, 13, 0, 655408, 13, 0, 655409, 13, 0, 655410, 13, 0, 655411, 13, 0, 655412, 13, 0, 655413, 13, 0, 655414, 13, 0, 655415, 13, 0, 655416, 17, 0, 720908, 17, 0, 720909, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 13, 0, 720923, 13, 0, 720924, 13, 0, 720925, 13, 0, 720926, 17, 0, 720934, 17, 0, 720935, 13, 0, 720936, 13, 0, 720937, 13, 0, 720938, 13, 0, 720939, 13, 0, 720940, 13, 0, 720941, 13, 0, 720942, 13, 0, 720943, 13, 0, 720944, 13, 0, 720945, 13, 0, 720946, 13, 0, 720947, 13, 0, 720948, 13, 0, 720949, 13, 0, 720950, 13, 0, 720951, 13, 0, 720952, 17, 0, 786443, 17, 0, 786444, 17, 0, 786445, 13, 0, 786446, 13, 0, 786447, 13, 0, 786448, 13, 0, 786449, 13, 0, 786450, 13, 0, 786451, 13, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 786461, 13, 0, 786462, 13, 0, 786463, 17, 0, 786470, 17, 0, 786471, 13, 0, 786472, 13, 0, 786473, 13, 0, 786474, 13, 0, 786475, 13, 0, 786476, 13, 0, 786477, 13, 0, 786478, 13, 0, 786479, 13, 0, 786480, 13, 0, 786481, 13, 0, 786482, 13, 0, 786483, 13, 0, 786484, 13, 0, 786485, 13, 0, 786486, 13, 0, 786487, 13, 0, 786488, 17, 0, 851979, 17, 0, 851980, 13, 0, 851981, 13, 0, 851982, 13, 0, 851983, 13, 0, 851984, 13, 0, 851985, 13, 0, 851986, 13, 0, 851987, 13, 0, 851988, 13, 0, 851989, 13, 0, 851990, 13, 0, 851991, 13, 0, 851992, 13, 0, 851993, 13, 0, 851994, 13, 0, 851995, 13, 0, 851996, 13, 0, 851997, 13, 0, 851998, 13, 0, 851999, 17, 0, 852006, 17, 0, 852007, 13, 0, 852008, 13, 0, 852009, 13, 0, 852010, 13, 0, 852011, 13, 0, 852012, 13, 0, 852013, 13, 0, 852014, 13, 0, 852015, 13, 0, 852016, 13, 0, 852017, 13, 0, 852018, 13, 0, 852019, 13, 0, 852020, 13, 0, 852021, 13, 0, 852022, 13, 0, 852023, 13, 0, 852024, 17, 0, 917515, 17, 0, 917516, 13, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 13, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 13, 0, 917529, 13, 0, 917530, 13, 0, 917531, 13, 0, 917532, 13, 0, 917533, 13, 0, 917534, 13, 0, 917535, 17, 0, 917542, 17, 0, 917543, 13, 0, 917544, 13, 0, 917545, 13, 0, 917546, 13, 0, 917547, 13, 0, 917548, 13, 0, 917549, 13, 0, 917550, 13, 0, 917551, 13, 0, 917552, 13, 0, 917553, 13, 0, 917554, 13, 0, 917555, 13, 0, 917556, 13, 0, 917557, 13, 0, 917558, 13, 0, 917559, 13, 0, 917560, 17, 0, 983051, 17, 0, 983052, 13, 0, 983053, 13, 0, 983054, 13, 0, 983055, 13, 0, 983056, 13, 0, 983057, 13, 0, 983058, 13, 0, 983059, 13, 0, 983060, 13, 0, 983061, 13, 0, 983062, 13, 0, 983063, 13, 0, 983064, 13, 0, 983065, 13, 0, 983066, 13, 0, 983067, 13, 0, 983068, 13, 0, 983069, 13, 0, 983070, 13, 0, 983071, 17, 0, 983078, 17, 0, 983079, 13, 0, 983080, 13, 0, 983081, 13, 0, 983082, 13, 0, 983083, 13, 0, 983084, 13, 0, 983085, 13, 0, 983086, 13, 0, 983087, 13, 0, 983088, 13, 0, 983089, 13, 0, 983090, 13, 0, 983091, 13, 0, 983092, 13, 0, 983093, 13, 0, 983094, 13, 0, 983095, 13, 0, 983096, 17, 0, 1048587, 17, 0, 1048588, 13, 0, 1048589, 13, 0, 1048590, 13, 0, 1048591, 13, 0, 1048592, 13, 0, 1048593, 13, 0, 1048594, 13, 0, 1048595, 13, 0, 1048596, 13, 0, 1048597, 13, 0, 1048598, 13, 0, 1048599, 13, 0, 1048600, 13, 0, 1048601, 13, 0, 1048602, 13, 0, 1048603, 13, 0, 1048604, 13, 0, 1048605, 13, 0, 1048606, 13, 0, 1048607, 17, 0, 1048614, 17, 0, 1048615, 13, 0, 1048616, 13, 0, 1048617, 13, 0, 1048618, 13, 0, 1048619, 13, 0, 1048620, 13, 0, 1048621, 13, 0, 1048622, 13, 0, 1048623, 13, 0, 1048624, 13, 0, 1048625, 13, 0, 1048626, 13, 0, 1048627, 13, 0, 1048628, 13, 0, 1048629, 13, 0, 1048630, 13, 0, 1048631, 13, 0, 1048632, 17, 0, 1114123, 17, 0, 1114124, 13, 0, 1114125, 13, 0, 1114126, 13, 0, 1114127, 13, 0, 1114128, 13, 0, 1114129, 13, 0, 1114130, 13, 0, 1114131, 13, 0, 1114132, 13, 0, 1114133, 13, 0, 1114134, 13, 0, 1114135, 13, 0, 1114136, 13, 0, 1114137, 13, 0, 1114138, 13, 0, 1114139, 13, 0, 1114140, 13, 0, 1114141, 13, 0, 1114142, 13, 0, 1114143, 17, 0, 1114150, 17, 0, 1114151, 13, 0, 1114152, 13, 0, 1114153, 13, 0, 1114154, 13, 0, 1114155, 13, 0, 1114156, 13, 0, 1114157, 13, 0, 1114158, 13, 0, 1114159, 13, 0, 1114160, 13, 0, 1114161, 13, 0, 1114162, 13, 0, 1114163, 13, 0, 1114164, 13, 0, 1114165, 13, 0, 1114166, 13, 0, 1114167, 13, 0, 1114168, 17, 0, 1179659, 17, 0, 1179660, 13, 0, 1179661, 13, 0, 1179662, 13, 0, 1179663, 13, 0, 1179664, 13, 0, 1179665, 13, 0, 1179666, 13, 0, 1179667, 13, 0, 1179668, 13, 0, 1179669, 13, 0, 1179670, 13, 0, 1179671, 13, 0, 1179672, 13, 0, 1179673, 13, 0, 1179674, 13, 0, 1179675, 13, 0, 1179676, 13, 0, 1179677, 13, 0, 1179678, 17, 0, 1179685, 17, 0, 1179686, 13, 0, 1179687, 13, 0, 1179688, 13, 0, 1179689, 13, 0, 1179690, 13, 0, 1179691, 13, 0, 1179692, 13, 0, 1179693, 13, 0, 1179694, 13, 0, 1179695, 13, 0, 1179696, 13, 0, 1179697, 13, 0, 1179698, 13, 0, 1179699, 13, 0, 1179700, 13, 0, 1179701, 13, 0, 1179702, 13, 0, 1179703, 13, 0, 1179704, 17, 0, 1245195, 17, 0, 1245196, 13, 0, 1245197, 13, 0, 1245198, 13, 0, 1245199, 13, 0, 1245200, 13, 0, 1245201, 13, 0, 1245202, 13, 0, 1245203, 13, 0, 1245204, 13, 0, 1245205, 13, 0, 1245206, 13, 0, 1245207, 13, 0, 1245208, 13, 0, 1245209, 13, 0, 1245210, 13, 0, 1245211, 13, 0, 1245212, 13, 0, 1245213, 13, 0, 1245214, 17, 0, 1245221, 17, 0, 1245222, 13, 0, 1245223, 13, 0, 1245224, 13, 0, 1245225, 13, 0, 1245226, 13, 0, 1245227, 13, 0, 1245228, 13, 0, 1245229, 13, 0, 1245230, 13, 0, 1245231, 13, 0, 1245232, 13, 0, 1245233, 13, 0, 1245234, 13, 0, 1245235, 13, 0, 1245236, 13, 0, 1245237, 13, 0, 1245238, 13, 0, 1245239, 13, 0, 1245240, 17, 0, 1310732, 17, 0, 1310733, 13, 0, 1310734, 13, 0, 1310735, 13, 0, 1310736, 13, 0, 1310737, 13, 0, 1310738, 13, 0, 1310739, 13, 0, 1310740, 13, 0, 1310741, 13, 0, 1310742, 13, 0, 1310743, 13, 0, 1310744, 13, 0, 1310745, 13, 0, 1310746, 13, 0, 1310747, 13, 0, 1310748, 13, 0, 1310749, 13, 0, 1310750, 17, 0, 1310757, 17, 0, 1310758, 13, 0, 1310759, 13, 0, 1310760, 13, 0, 1310761, 13, 0, 1310762, 13, 0, 1310763, 13, 0, 1310764, 13, 0, 1310765, 13, 0, 1310766, 13, 0, 1310767, 13, 0, 1310768, 13, 0, 1310769, 13, 0, 1310770, 13, 0, 1310771, 13, 0, 1310772, 13, 0, 1310773, 13, 0, 1310774, 13, 0, 1310775, 13, 0, 1310776, 17, 0, 1376269, 17, 0, 1376270, 17, 0, 1376271, 17, 0, 1376272, 17, 0, 1376273, 13, 0, 1376274, 13, 0, 1376275, 13, 0, 1376276, 13, 0, 1376277, 13, 0, 1376278, 13, 0, 1376279, 13, 0, 1376280, 13, 0, 1376281, 13, 0, 1376282, 13, 0, 1376283, 13, 0, 1376284, 17, 0, 1376285, 17, 0, 1376293, 17, 0, 1376294, 13, 0, 1376295, 13, 0, 1376296, 13, 0, 1376297, 13, 0, 1376298, 13, 0, 1376299, 13, 0, 1376300, 13, 0, 1376301, 13, 0, 1376302, 13, 0, 1376303, 13, 0, 1376304, 13, 0, 1376305, 13, 0, 1376306, 13, 0, 1376307, 13, 0, 1376308, 13, 0, 1376309, 13, 0, 1376310, 13, 0, 1376311, 13, 0, 1376312, 17, 0, 1441809, 17, 0, 1441810, 17, 0, 1441811, 17, 0, 1441812, 17, 0, 1441813, 17, 0, 1441814, 17, 0, 1441815, 17, 0, 1441816, 17, 0, 1441817, 17, 0, 1441818, 17, 0, 1441819, 17, 0, 1441830, 17, 0, 1441831, 17, 0, 1441832, 17, 0, 1441833, 17, 0, 1441834, 17, 0, 1441835, 17, 0, 1441836, 17, 0, 1441837, 17, 0, 1441838, 17, 0, 1441839, 17, 0, 1441840, 17, 0, 1441841, 17, 0, 1441842, 17, 0, 1441843, 17, 0, 1441844, 17, 0, 1441845, 17, 0, 1441846, 17, 0, 1441847, 17, 0 )

[node name="Entities" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "This is for anything that is \"living\" or otherwise semi intelligent.

Basically anything with a script that affects gameplay. (animating sprites or something doesn't count.)
"
}

[node name="Entrance" type="Node2D" parent="Entities"]
position = Vector2( 90.9794, 79.2854 )

[node name="SkullAltar" type="Sprite" parent="Entities"]
position = Vector2( 1422.05, 1293.28 )
scale = Vector2( 2.55907, 2.55907 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Entities/SkullAltar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/SkullAltar/StaticBody2D"]
position = Vector2( -0.943909, 17.9336 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Entities/SkullAltar"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/SkullAltar/Area2D"]
position = Vector2( -0.5, 2 )
shape = SubResource( 2 )

[node name="HolyEndingBoss" parent="Entities" instance=ExtResource( 4 )]
visible = false
position = Vector2( 2786.34, -1435.6 )

[node name="HorrorBoss" parent="Entities" instance=ExtResource( 3 )]
position = Vector2( 2740.47, -1487.89 )

[node name="Props" type="Node2D" parent="."]
__meta__ = {
"_editor_description_": "This is for purely cosmetic things in the background. 

Sprites or otherwise non \"physics\" objects exist here."
}
